# float-pigment-rust

./: .gitignore  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
test/: test.js
