[package]
authors = ["msojocs <jiyecafe@gmail.com>"]
edition = "2021"
name    = "napi-float-pigment"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
float-pigment-css = { version = "0.7.0" }
napi        = { version = "3.4.0", features = ["dyn-symbols"] }
napi-derive = { version = "3.3.0" }

[build-dependencies]
napi-build = "2.2.4"

[profile.release]
lto = true
strip = "symbols"